--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -7,7 +7,6 @@ Collapsed=0
 Pos=754,19
 Size=526,701
 Collapsed=0
-DockId=0x00000004,0
 
 [Window][Example: Log]
 Pos=0,581
@@ -15,7 +14,6 @@ Size=1280,139
 Collapsed=0
 
 [Window][DockSpace Demo]
-Pos=0,0
 Size=1280,720
 Collapsed=0
 
@@ -35,10 +33,13 @@ Pos=60,60
 Size=500,440
 Collapsed=0
 
+[Window][Test]
+Pos=60,60
+Size=93,48
+Collapsed=0
+
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=199,426 Size=1280,701 Split=X
-  DockNode    ID=0x00000001 Parent=0x3BC79352 SizeRef=449,2009 Selected=0xCB707B69
-  DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=3389,2009 Split=X
-    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=752,701 CentralNode=1
-    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=526,701 Selected=0xE927CF2F
+DockSpace   ID=0x3BC79352 Pos=199,426 Size=1280,701 Split=X
+  DockNode  ID=0x00000001 Parent=0x3BC79352 SizeRef=449,2009 Selected=0xCB707B69
+  DockNode  ID=0x00000002 Parent=0x3BC79352 SizeRef=3389,2009 CentralNode=1
 
