--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,8 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1276,485
-Size=927,868
+ViewportPos=895,900
+ViewportId=0xE927CF2F
+Size=927,748
 Collapsed=0
 
 [Window][Example: Log]
