--- a/gameEngineTest/gameEngineTest.vcxproj
+++ b/gameEngineTest/gameEngineTest.vcxproj
@@ -152,10 +152,10 @@
     <ClInclude Include="src\Engine\Core\MouseButtonCodes.h" />
     <ClInclude Include="src\Engine\Core\Timestep.h" />
     <ClInclude Include="src\Engine\Core\Window.h" />
-    <ClInclude Include="src\Engine\Event\ApplicationEvent.h" />
-    <ClInclude Include="src\Engine\Event\Event.h" />
-    <ClInclude Include="src\Engine\Event\KeyEvent.h" />
-    <ClInclude Include="src\Engine\Event\MouseEvent.h" />
+    <ClInclude Include="src\Engine\Events\ApplicationEvent.h" />
+    <ClInclude Include="src\Engine\Events\Event.h" />
+    <ClInclude Include="src\Engine\Events\KeyEvent.h" />
+    <ClInclude Include="src\Engine\Events\MouseEvent.h" />
     <ClInclude Include="src\Engine\Renderer\Buffer.h" />
     <ClInclude Include="src\Engine\Renderer\GraphicsContext.h" />
     <ClInclude Include="src\Engine\Renderer\OrthographicCamera.h" />
