--- a/gameEngineTest/gameEngineTest.vcxproj.filters
+++ b/gameEngineTest/gameEngineTest.vcxproj.filters
@@ -90,18 +90,6 @@
     <ClInclude Include="src\Engine\Core\Window.h">
       <Filter>src\Engine\Core</Filter>
     </ClInclude>
-    <ClInclude Include="src\Engine\Event\ApplicationEvent.h">
-      <Filter>src\Engine\Event</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Engine\Event\Event.h">
-      <Filter>src\Engine\Event</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Engine\Event\KeyEvent.h">
-      <Filter>src\Engine\Event</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Engine\Event\MouseEvent.h">
-      <Filter>src\Engine\Event</Filter>
-    </ClInclude>
     <ClInclude Include="src\Engine\Renderer\Buffer.h">
       <Filter>src\Engine\Renderer</Filter>
     </ClInclude>
@@ -1388,6 +1376,18 @@
     </ClInclude>
     <ClInclude Include="vendor\stb_image\stb_image.h">
       <Filter>vendor\stb_image</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Engine\Events\ApplicationEvent.h">
+      <Filter>src\Engine\Event</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Engine\Events\Event.h">
+      <Filter>src\Engine\Event</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Engine\Events\KeyEvent.h">
+      <Filter>src\Engine\Event</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Engine\Events\MouseEvent.h">
+      <Filter>src\Engine\Event</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
