No.61 Batch rendering

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1089,1182
+ViewportPos=448,1333
 ViewportId=0xE927CF2F
 Size=927,748
 Collapsed=0
@@ -40,7 +40,8 @@ Size=132,165
 Collapsed=0
 
 [Window][Settings]
-Pos=60,60
+ViewportPos=151,729
+ViewportId=0x1C33C293
 Size=647,356
 Collapsed=0
 
