--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -15,6 +15,7 @@ Size=1280,139
 Collapsed=0
 
 [Window][DockSpace Demo]
+Pos=0,0
 Size=1280,720
 Collapsed=0
 
@@ -40,13 +41,13 @@ Size=132,165
 Collapsed=0
 
 [Window][Settings]
-ViewportPos=151,729
+ViewportPos=479,809
 ViewportId=0x1C33C293
-Size=647,356
+Size=564,199
 Collapsed=0
 
 [Docking][Data]
-DockSpace   ID=0x3BC79352 Pos=199,426 Size=1280,701 Split=X
+DockSpace   ID=0x3BC79352 Window=0x4647B76E Pos=138,365 Size=1280,701 Split=X
   DockNode  ID=0x00000001 Parent=0x3BC79352 SizeRef=449,2009 Selected=0xCB707B69
-  DockNode  ID=0x00000002 Parent=0x3BC79352 SizeRef=3389,2009 CentralNode=1
+  DockNode  ID=0x00000002 Parent=0x3BC79352 SizeRef=3389,2009 CentralNode=1 Selected=0x1C33C293
 
