--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,10 +4,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=448,1333
-ViewportId=0xE927CF2F
-Size=927,748
+Pos=0,19
+Size=1280,351
 Collapsed=0
+DockId=0x00000002,0
 
 [Window][Example: Log]
 Pos=0,581
@@ -41,13 +41,15 @@ Size=132,165
 Collapsed=0
 
 [Window][Settings]
-ViewportPos=479,809
-ViewportId=0x1C33C293
-Size=564,199
+Pos=0,372
+Size=1280,348
 Collapsed=0
+DockId=0x00000004,0
 
 [Docking][Data]
-DockSpace   ID=0x3BC79352 Window=0x4647B76E Pos=138,365 Size=1280,701 Split=X
-  DockNode  ID=0x00000001 Parent=0x3BC79352 SizeRef=449,2009 Selected=0xCB707B69
-  DockNode  ID=0x00000002 Parent=0x3BC79352 SizeRef=3389,2009 CentralNode=1 Selected=0x1C33C293
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=475,510 Size=1280,701 Split=Y
+  DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=1280,351 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=449,2009 Selected=0xCB707B69
+    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=3389,2009 CentralNode=1 Selected=0xE927CF2F
+  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=1280,348 Selected=0x1C33C293
 
